kube/front/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: site-1.szlk.lan
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: nginx-svc
          servicePort: 80
